--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
-vercel.json
 {
-  "crons": [
-    { "path": "/api/ical/ingest", "schedule": "0 * * * *" },
-    { "path": "/api/summary/make", "schedule": "5 7 * * *" },
-    { "path": "/api/digest/send", "schedule": "0 8 * * *" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
   ]
 }
